public/styles/nav.css
nav {
  height: 120px;
  display: flex;
  background-color: #4056A1;
  color: #FFFFFF;
  justify-content: space-between;
  align-items: center;
  position: fixed;
  width: 100%;
  top: 0;
}

nav > span {
  font-family: 'Bungee', cursive;
  padding-left: 1.5em;
  padding-right: 1.5em;
}

